# ai-orchestrator

./: .gitignore  README.md  docker-compose-one.yml  docker-compose.yml
EnvServer/: .gitignore  .goreleaser.yml  Dockerfile  Makefile  README.md  docker-compose-one.yml  go.mod  go.sum
EnvServer/cmd/: main.go
EnvServer/other/: exporter.py  metricModifier.py  metricModifier_v2.py
EnvServer/plot/: generate_csv.sh  plot_cpu.py  plot_mem.py
MLServer/: ClassifierInterface.py  DBConnector.py  Dockerfile  FlavorMapper.py  IAScheduler.py  ModelManager.py  OnedConnector.py  README.md  RandomClassifier.py  RandomScheduler.py  SchedulerInterface.py  requirements.txt  server.py  test2.py  test_old.py
MLServer/ClassicalClassifier/: ClassicalClassifier.py  MTS_utils.py  run_MC2PCA.py  test.py
MLServer/DLClassifier/: DLClassifier.py  MTS_utils.py  idec.py  model_package.py
Orchestrator/: README.md
Orchestrator/LoadOptimizer/: README.md  nsga_ii.py  spea2.py
ml-models/: README.md  clustering.py  deep_clustering.py
orchestration-algorithms/: README.md
scaler/: README.md  main.py  main.py.bkp  producer_app.py
src/system-state-recorder/: .env  Cargo.toml  Makefile  README.md
src/system-state-recorder/src/: README.md  core.rs  index.html  index.html.1  index.html.2  lib.rs  main.rs  monitor.rs  monitor_test.rs  placement_request.rs  placement_request_test.rs  placement_response.rs  placement_response_test.rs  prometheus.rs  prometheus_test.rs  request_handler.rs  simulator.rs  simulator_test.rs
src/system-state-recorder/tests/: simulator_tests.rs
(+275 files in other folders)
