[package]
name = "staterec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
lazy_static = "1.4"
dotenv = "0.15"
async-trait = "0.1"
